# telegram-bot

./: .gitignore  Dockerfile  api.py  app.py  bot.py  commands.py  constants.py  fetch.py  logging.py  models.py  pyproject.toml
.github/workflows/: build.yml
lyrix_bot/: api.py  app.py  bot.py  commands.py  fetch.py  logger.py
lyrix_bot/models/: user.py
lyrix_telegram_bot/: .gitignore  app.py  bot.py  commands.py  fetch.py
lyrix_telegram_bot/models/: user.py
models/: song.py  user.py
