[tool.poetry]
name = "lyrix_telegram_bot"
version = "0.2.0"
description = "A music intent for telegram"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
swaglyrics = "^1.2.2"
python-telegram-bot = "^13.6"
coloredlogs = "^15.0.1"
spotipy = "^2.18.0"
lyrix-api = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
